--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,17 @@
 {
   "name": "ADHD Routine",
   "short_name": "Routine",
+  "id": "adhd-routine",
+  "description": "A simple ADHD-friendly daily routine checklist.",
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
+  "lang": "en",
+  "dir": "ltr",
+  "categories": ["productivity", "lifestyle", "health"],
   "icons": [
     {
       "src": "icon-192.png",
@@ -16,5 +23,16 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "screenshot1.png",
+      "sizes": "540x720",
+      "type": "image/png"
+    }
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "prefer_related_applications": false
 }
