--- a/manifest.json
+++ b/manifest.json
@@ -40,18 +40,10 @@
     }
   ],
   "prefer_related_applications": false,
-  "related_applications": [
-    {
-      "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.example.routine",
-      "id": "com.example.routine"
-    }
-  ],
+  "related_applications": [],
   "launch_handler": {
     "client_mode": "navigate"
   },
-  "scope_extensions": [
-    { "origin": "https://example.com" }
-  ],
+  "scope_extensions": [],
   "iarc_rating_id": "0000"
 }
